--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
-    "nodejs-md5": "^1.1.0"
+    "nodejs-md5": "^1.1.0",
+    "querystring": "^0.2.0",
+    "request": "^2.88.2"
   }
 }
