--- a/client/package.json
+++ b/client/package.json
@@ -31,11 +31,14 @@
     "@angular/platform-browser": "9.0.5",
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
+    "@crystalui/angular-modal": "^0.1.6",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "angular-toastr": "^2.1.1",
     "chart.js": "2.8.0",
     "core-js": "3.6.4",
-    "ngx-toastr": "10.0.4",
+    "ngx-toastr": "^10.0.4",
     "rxjs": "6.5.2",
+    "rxjs-compat": "^6.6.2",
     "tslib": "1.10.0",
     "zone.js": "0.10.2"
   },
