--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,6 +17,12 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "invoice-modal": [
+        "dist/invoice-modal/invoice-modal",
+        "dist/invoice-modal"
+      ]
+    }
   }
 }
