--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.900.5",
+    "@angular-devkit/build-ng-packagr": "~0.900.5",
     "@angular/cli": "9.0.5",
     "@angular/compiler-cli": "9.0.5",
     "@angular/language-service": "9.0.5",
@@ -58,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
+    "ng-packagr": "^9.0.0",
     "protractor": "5.4.3",
     "ts-node": "8.6.2",
     "tslint": "6.0.0",
