--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.2",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
