--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "9.0.5",
     "@crystalui/angular-modal": "^0.1.6",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
+    "@ngneat/helipopper": "^1.3.2",
     "angular-toastr": "^2.1.1",
     "chart.js": "2.8.0",
     "core-js": "3.6.4",
